// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MarkdownProcessor > convertMarkdownToJSON > should correctly process hierarchical lists with personal reflections 1`] = `
{
  "entries": [
    {
      "content": [
        {
          "isComplete": false,
          "isTask": false,
          "section": "personal",
          "subentries": [],
          "tag": "tag",
          "text": "personal",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "personal",
          "subentries": [],
          "tag": "tag",
          "text": "Perfectionism",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "personal",
          "subentries": [
            {
              "isComplete": false,
              "isTask": false,
              "section": "Overthinking, analysis paralysis, fear of failure",
              "subentries": [],
              "tag": "tag",
              "text": "decrease my playfulness.",
            },
            {
              "isComplete": false,
              "isTask": false,
              "section": "Overthinking, analysis paralysis, fear of failure",
              "subentries": [],
              "tag": "tag",
              "text": "decreases poor decision-making",
            },
            {
              "isComplete": false,
              "isTask": false,
              "section": "Overthinking, analysis paralysis, fear of failure",
              "subentries": [],
              "tag": "tag",
              "text": "decreases action-taking",
            },
            {
              "isComplete": false,
              "isTask": false,
              "section": "Overthinking, analysis paralysis, fear of failure",
              "subentries": [],
              "tag": "tag",
              "text": "reinforces personal beliefs instead of increasing objective truth",
            },
          ],
          "tag": "tag",
          "text": "Overthinking, analysis paralysis, fear of failure",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "personal",
          "subentries": [
            {
              "isComplete": false,
              "isTask": false,
              "section": "Fear of judgement",
              "subentries": [],
              "tag": "tag",
              "text": "desire to be seen as correct instead of desire to be effective",
            },
            {
              "isComplete": false,
              "isTask": false,
              "section": "Fear of judgement",
              "subentries": [],
              "tag": "tag",
              "text": "many judgments should be ignored because they lack sincerity",
            },
          ],
          "tag": "tag",
          "text": "Fear of judgement",
        },
      ],
      "date": undefined,
      "filename": "personal-reflections.md",
      "frontmatter": undefined,
      "heading": "personal",
    },
  ],
  "metadata": {
    "readingTime": 1,
    "wordCount": 58,
  },
}
`;

exports[`MarkdownProcessor > convertMarkdownToJSON > should detect tasks and their completion status 1`] = `
{
  "entries": [
    {
      "content": [
        {
          "isComplete": false,
          "isTask": false,
          "section": "tasks",
          "subentries": [],
          "tag": "tag",
          "text": "Tasks",
        },
        {
          "isComplete": false,
          "isTask": true,
          "section": "tasks",
          "subentries": [],
          "tag": "tag",
          "text": "Incomplete task",
        },
        {
          "isComplete": true,
          "isTask": true,
          "section": "tasks",
          "subentries": [],
          "tag": "tag",
          "text": "Complete task",
        },
      ],
      "date": undefined,
      "filename": "test.md",
      "frontmatter": undefined,
      "heading": "Tasks",
    },
  ],
  "metadata": {
    "readingTime": 1,
    "wordCount": 11,
  },
}
`;

exports[`MarkdownProcessor > convertMarkdownToJSON > should extract metadata from content 1`] = `
{
  "entries": [
    {
      "content": [
        {
          "isComplete": false,
          "isTask": false,
          "section": "meeting notes",
          "subentries": [],
          "tag": "tag",
          "text": "Meeting Notes",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "meeting notes",
          "subentries": [],
          "tag": "tag",
          "text": "Meeting with John Smith in New York about #project planning.",
        },
      ],
      "date": undefined,
      "filename": "test.md",
      "frontmatter": undefined,
      "heading": "Meeting Notes",
    },
  ],
  "metadata": {
    "readingTime": 1,
    "wordCount": 13,
  },
}
`;

exports[`MarkdownProcessor > convertMarkdownToJSON > should handle nested lists properly 1`] = `
{
  "entries": [
    {
      "content": [
        {
          "isComplete": false,
          "isTask": false,
          "section": "nested list",
          "subentries": [],
          "tag": "tag",
          "text": "Nested List",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "nested list",
          "subentries": [
            {
              "isComplete": false,
              "isTask": false,
              "section": "Fruits:",
              "subentries": [],
              "tag": "tag",
              "text": "Apples",
            },
            {
              "isComplete": false,
              "isTask": false,
              "section": "Fruits:",
              "subentries": [],
              "tag": "tag",
              "text": "Bananas",
            },
          ],
          "tag": "tag",
          "text": "Fruits:",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "nested list",
          "subentries": [
            {
              "isComplete": false,
              "isTask": false,
              "section": "Vegetables:",
              "subentries": [],
              "tag": "tag",
              "text": "Carrots",
            },
            {
              "isComplete": false,
              "isTask": false,
              "section": "Vegetables:",
              "subentries": [],
              "tag": "tag",
              "text": "Broccoli",
            },
          ],
          "tag": "tag",
          "text": "Vegetables:",
        },
      ],
      "date": undefined,
      "filename": "test.md",
      "frontmatter": undefined,
      "heading": "Nested List",
    },
  ],
  "metadata": {
    "readingTime": 1,
    "wordCount": 15,
  },
}
`;

exports[`MarkdownProcessor > convertMarkdownToJSON > should process headings properly 1`] = `
{
  "entries": [
    {
      "content": [
        {
          "isComplete": false,
          "isTask": false,
          "section": "heading 1",
          "subentries": [],
          "tag": "tag",
          "text": "Heading 1",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "heading 1",
          "subentries": [],
          "tag": "tag",
          "text": "Paragraph under heading 1",
        },
      ],
      "date": undefined,
      "filename": "test.md",
      "frontmatter": undefined,
      "heading": "Heading 1",
    },
    {
      "content": [
        {
          "isComplete": false,
          "isTask": false,
          "section": "heading 2",
          "subentries": [],
          "tag": "tag",
          "text": "Heading 2",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "heading 2",
          "subentries": [],
          "tag": "tag",
          "text": "Paragraph under heading 2",
        },
      ],
      "date": undefined,
      "filename": "test.md",
      "frontmatter": undefined,
      "heading": "Heading 2",
    },
  ],
  "metadata": {
    "readingTime": 1,
    "wordCount": 14,
  },
}
`;

exports[`MarkdownProcessor > convertMarkdownToJSON > should process lists correctly 1`] = `
{
  "entries": [
    {
      "content": [
        {
          "isComplete": false,
          "isTask": false,
          "section": "shopping list",
          "subentries": [],
          "tag": "tag",
          "text": "Shopping List",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "shopping list",
          "subentries": [],
          "tag": "tag",
          "text": "Apples",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "shopping list",
          "subentries": [],
          "tag": "tag",
          "text": "Bananas",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "shopping list",
          "subentries": [],
          "tag": "tag",
          "text": "Milk",
        },
      ],
      "date": undefined,
      "filename": "test.md",
      "frontmatter": undefined,
      "heading": "Shopping List",
    },
  ],
  "metadata": {
    "readingTime": 1,
    "wordCount": 9,
  },
}
`;
